# endpoint-deprecation-auditor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  sample-report.md
src/endpoint_auditor/: cli.py  config.py  models.py  pipline.py
src/endpoint_auditor/integrations/: graylog_mcp.py  graylog_mcp_client.py  graylog_service.py  jira_mcp_client.py  jira_service.py
src/endpoint_auditor/reporters/: base_reporter.py
src/endpoint_auditor/scanners/: log_extractor.py  spring_controller_scanner.py  usage_scanner.py
tests/: test_config.py  test_pipeline.py
tests/fixtures/clients/: NotAService.java  OrderClient.java  PaymentClient.java  UserClient.java
tests/fixtures/clients/nested/: ApiClient.java
tests/fixtures/controllers/: NotAController.java  PaymentController.java  SimpleController.java
tests/integrations/: test_graylog_mcp_client.py  test_graylog_service.py  test_jira_mcp_client.py  test_jira_service.py
tests/reporters/: test_base_reporter.py
tests/scanners/: test_log_extractor.py  test_spring_controller_scanner.py  test_usage_scanner.py
